# cpp-modern-2022-08-30

./: .gitignore  README.md
cpp-modern/: CMakeLists.txt
cpp-modern/_exercise/ex_constexpr_if/: CMakeLists.txt  constexprif_ex.cpp
cpp-modern/_project-template/: tests.cpp
cpp-modern/constexpr/: constexpr.cpp
cpp-modern/crtp/: tests.cpp
cpp-modern/custom-literals/: custom_literals.cpp
cpp-modern/fold-expressions/: CMakeLists.txt  ex_fold_expressions.cpp  fold_expressions.cpp
cpp-modern/ifs/: ifs.cpp
cpp-modern/new-types-std-lib/: ex_visiting_variants.cpp  vacabulary_types.cpp  vocabulary_types.cpp
cpp-modern/ranges/: ranges.cpp
cpp-modern/small-features/: small_features.cpp
cpp-modern/structured-bindings/: CMakeLists.txt  structured_bindings.cpp
cpp-modern/traits-concepts/: constraints_concepts.cpp  type_traits.cpp
cpp-modern/type-deduction/: CMakeLists.txt  auto_declarations_ex.cpp  ctad.cpp  template_arg_deduction.cpp
